--- a/res/layout/newgamecreate.xml
+++ b/res/layout/newgamecreate.xml
@@ -1,38 +1,75 @@
-<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/layout_newgamecreate"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:layout_gravity="center_vertical"
     android:layout_margin="10dp"
-    android:orientation="vertical" >
+    android:layout_marginLeft="5dp"
+    android:layout_marginRight="5dp" >
 
     <TextView
-        android:id="@+id/textView1"
+        android:id="@+id/label_gameName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp"
-        android:text="@string/prompt_newgamename"
-        android:textSize="18.0sp"
-        android:textStyle="bold" />
+        android:text="@string/label_gameName"
+        android:textSize="14.0sp"
+        android:textStyle="bold"
+        android:visibility="visible" />
 
     <EditText
-        android:id="@+id/enterText"
-        android:layout_width="match_parent"
+        android:id="@+id/edit_gameName"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/label_gameName"
+        android:hint="@string/hint_newGameName"
+        android:inputType="text" />
+
+    <TextView
+        android:id="@+id/label_startDatetime"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/edit_gameName"
+        android:text="@string/label_startDatetime"
+        android:textSize="14.0sp"
+        android:textStyle="bold"
+        android:visibility="visible" />
+
+    <EditText
+        android:id="@+id/editStartDate"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
-        android:layout_below="@+id/textView1"
-        android:ems="10"
-        android:hint="@string/hint_newgamename"
-        android:imeOptions="actionDone"
-        android:inputType="text" />
+        android:layout_alignRight="@+id/editEndDate"
+        android:layout_below="@+id/label_startDatetime"
+        android:hint="@string/hint_startDate"
+        android:inputType="date"/>
+
+    <TextView
+        android:id="@+id/label_endDatetime"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/editStartDate"
+        android:text="@string/label_endDatetime"
+        android:textSize="14.0sp"
+        android:textStyle="bold"
+        android:visibility="visible" />
+
+    <EditText
+        android:id="@+id/editEndDate"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_below="@+id/label_endDatetime"
+        android:layout_toLeftOf="@+id/editEndTime"
+        android:hint="@string/hint_endDate"
+        android:inputType="date"/>
 
     <Button
         android:id="@+id/newGameButton_continue"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
-        android:layout_below="@+id/enterText"
+        android:layout_below="@id/editEndTime"
         android:layout_marginTop="14dp"
         android:gravity="center"
         android:text="@string/label_continue"
@@ -51,5 +88,32 @@
         android:textSize="16sp"
         android:textStyle="normal" />
     
-</RelativeLayout>
+    
+    <View
+        android:id="@+id/view1"
+        android:layout_width="0.5dp"
+        android:layout_height="fill_parent"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"   />
 
+    <EditText
+        android:id="@+id/editStartTime"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/view1"
+        android:layout_below="@+id/label_startDatetime"
+        android:ems="10"
+        android:hint="@string/hint_startTime"
+        android:inputType="time"/>
+
+    <EditText
+        android:id="@+id/editEndTime"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/editStartTime"
+        android:layout_below="@+id/label_endDatetime"
+        android:ems="10"
+        android:hint="@string/hint_endTime"
+        android:inputType="time" />
+    
+</RelativeLayout>
