--- a/res/layout/gameplayersmanage.xml
+++ b/res/layout/gameplayersmanage.xml
@@ -38,34 +38,11 @@
         android:textSize="16sp"
         android:textStyle="normal" />
 
-    <Button
-        android:id="@+id/manageplayersButton_addplayer"
-        android:layout_width="fill_parent"
+    <ListView
+        android:id="@+id/listView_players"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_above="@+id/manageplayersButton_done"
-        android:layout_alignParentLeft="true"
-        android:gravity="center"
-        android:text="@string/label_addplayer"
-        android:textSize="16sp"
-        android:textStyle="normal" />
-
-    <EditText
-        android:id="@+id/enterText"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/manageplayersButton_addplayer"
-        android:layout_alignParentLeft="true"
-        android:layout_marginBottom="15dp"
-        android:ems="10"
-        android:hint="@string/hint_addplayer"
-        android:imeOptions="actionDone"
-        android:inputType="text" />
-
-    <ListView
-        android:id="@+id/listView1"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/enterText"
         android:layout_alignParentLeft="true"
         android:layout_below="@+id/textView1" >
 
