--- a/res/layout/gameplayersmanage.xml
+++ b/res/layout/gameplayersmanage.xml
@@ -7,7 +7,7 @@
     android:layout_margin="10dp" >
 
     <TextView
-        android:id="@+id/textView1"
+        android:id="@+id/myGamesList_textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="10dp"
@@ -44,7 +44,7 @@
         android:layout_height="wrap_content"
         android:layout_above="@+id/manageplayersButton_done"
         android:layout_alignParentLeft="true"
-        android:layout_below="@+id/textView1" >
+        android:layout_below="@+id/myGamesList_textView" >
 
     </ListView>
     
