--- a/res/layout/mygameslist_layout.xml
+++ b/res/layout/mygameslist_layout.xml
@@ -15,37 +15,25 @@
         android:textSize="18.0sp"
         android:textStyle="bold" />
 
-    <Button
-        android:id="@+id/manageplayersButton_done"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/manageplayersButton_cancel"
-        android:layout_alignBottom="@+id/manageplayersButton_cancel"
-        android:layout_alignParentRight="true"
-        android:gravity="center"
-        android:text="@string/label_done"
-        android:textSize="16sp"
-        android:textStyle="normal" />
-
-    <Button
-        android:id="@+id/manageplayersButton_cancel"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:gravity="center"
-        android:text="@string/label_cancel"
-        android:textSize="16sp"
-        android:textStyle="normal" />
-
     <ListView
         android:id="@+id/listview_myGames"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/manageplayersButton_done"
+        android:layout_above="@+id/mygameslistButton_menu"
         android:layout_alignParentLeft="true"
         android:layout_below="@+id/myGamesList_textView" >
 
     </ListView>
+
+    <Button
+        android:id="@+id/mygameslistButton_menu"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:gravity="center"
+        android:text="@string/label_menu"
+        android:textSize="16sp"
+        android:textStyle="normal" />
     
 </RelativeLayout>
