--- a/res/layout/dialog_add_item.xml
+++ b/res/layout/dialog_add_item.xml
@@ -3,10 +3,11 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content">
 
-<EditText>
-    android:id="@+id/editNewItem"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:hint="@string/hint_addItem">
-</EditText>
+    <EditText
+        android:id="@+id/editNewItem"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="@string/hint_addItem">
+    </EditText>
+
 </LinearLayout>
