--- a/res/layout/newgamecreate.xml
+++ b/res/layout/newgamecreate.xml
@@ -42,7 +42,8 @@
         android:layout_alignRight="@+id/editEndDate"
         android:layout_below="@+id/label_startDatetime"
         android:hint="@string/hint_startDate"
-        android:inputType="date"/>
+        android:inputType="date"
+        android:onClick="showStartDatePickerDialog"/>
 
     <TextView
         android:id="@+id/label_endDatetime"
@@ -62,7 +63,8 @@
         android:layout_below="@+id/label_endDatetime"
         android:layout_toLeftOf="@+id/editEndTime"
         android:hint="@string/hint_endDate"
-        android:inputType="date"/>
+        android:inputType="date"
+        android:onClick="showEndDatePickerDialog"/>
 
     <Button
         android:id="@+id/newGameButton_continue"
@@ -104,7 +106,8 @@
         android:layout_below="@+id/label_startDatetime"
         android:ems="10"
         android:hint="@string/hint_startTime"
-        android:inputType="time"/>
+        android:inputType="time"
+        android:onClick="showStartTimePickerDialog"/>
 
     <EditText
         android:id="@+id/editEndTime"
@@ -114,6 +117,7 @@
         android:layout_below="@+id/label_endDatetime"
         android:ems="10"
         android:hint="@string/hint_endTime"
-        android:inputType="time" />
+        android:inputType="time" 
+        android:onClick="showEndTimePickerDialog"/>
     
 </RelativeLayout>
