--- a/res/layout/mygameslist_layout.xml
+++ b/res/layout/mygameslist_layout.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    style="?android:attr/buttonBarStyle"
     android:layout_width="fill_parent"
     android:layout_height="match_parent"
     android:layout_gravity="center_vertical"
@@ -25,15 +26,21 @@
 
     </ListView>
 
+    <View
+        android:layout_width="fill_parent"
+        android:layout_height="0.5dp"
+        android:layout_alignBottom="@+id/listview_myGames"
+        android:layout_alignParentLeft="true"
+        android:background="@android:color/darker_gray" />
+    
     <Button
         android:id="@+id/mygameslistButton_menu"
+        style="?android:attr/buttonBarButtonStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
         android:layout_alignParentRight="true"
-        android:gravity="center"
-        android:text="@string/label_menu"
-        android:textSize="16sp"
-        android:textStyle="normal" />
-    
+        android:text="@string/button_mainmenu" />
+        
 </RelativeLayout>
