--- a/res/layout/viewgame_layout.xml
+++ b/res/layout/viewgame_layout.xml
@@ -1,6 +1,5 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/layout_createGame"
     style="?android:attr/buttonBarStyle"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
@@ -142,6 +141,6 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:layout_alignRight="@+id/listview_gameItems"
-        android:text="@string/button_back" />
+        android:text="@string/button_mainmenu" />
 
 </RelativeLayout>
