--- a/res/layout/play_game.xml
+++ b/res/layout/play_game.xml
@@ -51,7 +51,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/text_endDatetime"
-        android:text="@string/label_itemList"
+        android:text="@string/hint_itemslist"
         android:textSize="14.0sp"
         android:textStyle="bold"
         android:visibility="visible" />
