Fix bugs with game over logic, send user to view game after game create, and minor changes

--- a/res/layout/editgamenametime_layout.xml
+++ b/res/layout/editgamenametime_layout.xml
@@ -134,7 +134,7 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:gravity="center"
-        android:text="Back to Games List"
+        android:text="Main Menu"
         android:textSize="16sp"
         android:textStyle="normal" />
 
