--- a/res/layout/current_games_list.xml
+++ b/res/layout/current_games_list.xml
@@ -12,7 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="10dp"
-        android:text="@string/header_Currentgameslist"
+        android:text="Click to play!"
         android:textSize="18.0sp"
         android:textStyle="bold" />
 
